@@ -1,5 +1,11 @@
 2002-12-12  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c: 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Correctly do w2c transformations. Fixes struts.
+
+2002-12-12  Alexander Larsson  <alexl@redhat.com>
+
 	* data/preferences.desktop.in:
 	* data/serverconfig.desktop.in:
 	* data/serverconfig.directory.in:
